--- a/ders/iqra_list.html
+++ b/ders/iqra_list.html
@@ -13,14 +13,14 @@
 
 <p>Hicretten 3 asır sonra 900'lü yıllarda, Abbasi İslam devletinin merkezi olan Bağdat'ta Kurân'ın farklı okunuşları hakkında çok önemli bir tasnif çalışması yapıldı: İbn Mücâhid, belirli beş merkezden (Medine, Mekke, Basra, Şam, Kûfe) seçtiği yedi imamın kıraatini ilk defa bir araya getirerek <b>Kitâbus-Sebʿa fil-ḳırâʾât</b> (Yedi Kıraat) adlı eserini yazdı. Bundan bir asır sonra Endülüs'te Ebû ʿAmr ed-Dânî, <b>et-Teysīr</b> isimli meşhur kitabında söz konusu yedi kıraati kolayca takip edilir bir hale getirdi. </p>
 <p>1930 senesinde bu eser, Pretzl isimli Alman şarkiyatçı tarafından İstanbul'da tekrar yayınladı. Yaklaşık bir asır sonra da, Hollanda'lı M van Putten aynı kitabı İngilizce'ye çevirdi ve ön bilgiler ekleyerek genel kullanıma sundu. Aşağıdaki tablo Putten'in bu kıymetli çalışmasından süzülmüştür, <a target=Kuran href="https://okuyun.github.io/Kuran/guideQ.html#tesekkur">teşekkür ederiz</a>.</p>
-<p>Bütün kıraat farkları üç grupta toplanabilir. Bunların pek çoğu söyleyiş (lehçe) ve hareke farklarıdır, değişen bir sessiz harf yoksa bunları tabloda göstermedim:</p>
+<p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
   <li>Şive/lehçe farkları -- anlam değişmez
-  <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
+  <li><a href="./hareke.html#tablo1">Hareke farkları</a> -- sessiz harfler değişmez
   <li>Harf farkları -- bunlar da üç grupta toplanabilir:
     <ul>
-        <li>Farklı harf, aynı kök
-        <li><a href="./kiraat.html#kelime">Farklı kök</a> (<span class=yellow>sarı</span>)
+        <li><a href="./iqra_list.html#tablo1">Farklı harf</a>, aynı kök
+        <li><a href="./kelime.html#tablo1">Farklı kök</a> (<span class=yellow>sarı</span>)
         <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> (<span class=pink>pembe</span>)
     </ul>
 </ol>
