--- a/ders/kadime.html
+++ b/ders/kadime.html
@@ -34,17 +34,14 @@
 <ul>
     <li><a href="kiraat.html">Geçerli kıraat farkları</a>
     <li><a href="korunmus.html">Korunmuş unsurlar</a>
-    <li><a href="mesahif.html">Kayıtlı imlâ farkları</a>
-    <li><a href="iqra_list.html">Harf farkları listesi</a>
     <li><a href="hareke.html">Hareke farkları listesi</a>
+    <li><a href="iqra_list.html">Harf farkları listesi</a>
+    <li><a href="kelime.html">Kelime farkları listesi</a>
+    <li><a href="mesahif.html">Kayıtlı imlâ farkları</a>
     <li><a target=Kuran 
         href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRtPbSgwk-JFLFIt8ekNucywQ-Wbnho9u72jT7nH6Lm8hEOl-g4mqCZ81jYdOOxnUqpvdwco7QkIKbI/pubhtml?gid=0&single=true">İmlâ farkları tablosu</a>
     </li>
-</ul><br>
-<p>Videolar: <a target=Kuran
-  href="https://maeyler.github.io/JS/api/YouTube#PLqPY2DLsMnVBvkdCqxft-kBjwOy4lIBHs">
-  2024</a>
-</p>
+</ul>
 </div>
 <div class=gap> </div>
 <div class=narrow>
