--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -29,26 +29,27 @@
 6 Hamza      Kûfe
 7 el-Kisā'ī  Kûfe
 </pre>
-Bu sayfadaki örnekleri, imlâyı değiştirmeyen dört grupta topladım, beşinci grup ayrı bir sayfada anlatılıyor:
+<p>Bu sayfadaki örnekleri, beş grupta topladım:</p>
 <ol>
-    <li>Şive/lehçe farkları -- çok sayıda, anlam değişmez</li>
-    <li>Hareke farkları -- daha az sayıda, anlam değişebilir</li>
-    <li><a href="./iqra_list.html#tablo1">Farklı harf, aynı kelime</a> -- 200 ayet, kelime değişmez</li>
-    <li><a href="#tablo1">Farklı kelime, aynı imlâ</a> -- 13 ayette farklı kelimeler</li>
-    <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> -- 44 ayet, bir kelime farkı</li>
+    <li>Şive/lehçe farkları -- anlam değişmez
+    <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
+    <li><a href="./iqra_list.html">Harf farkları</a> -- kök ve imlâ değişmez, 198 ayet
+    <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ değişmez, 13 ayet
+    <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>) -- 44 ayet
 </ol>
+
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
 </p>
 
 <h3>1. Şive farkları</h3>
-<p>Kıraat farklarının pek çoğu sadece şive ve lehçe farkı, yazılış ve anlam değişmiyor. Bunların da büyük çoğunluğu ayet sonundaki noktasız ye (elif maksûra) harflerinin okunuşuyla ilgili:</p>
+<p>Kıraat farklarının pek çoğu sadece şive ve lehçe farkı, yazılış ve anlam değişmiyor. Bunların da büyük bir kısmı ayet sonundaki noktasız ye (elif maksûra) harflerinin okunuşuyla ilgili:</p>
 <p>Naziat <a name="v=79:15&b=muwsaY%60^">79:15</a> &mdash;
 <b>Mûsâ</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mûsê veya Mûsiy</a>
     <img src="img/Naziat 15.png">
 Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu görülüyor. Buna benzer çok örnek var: "hudâ", "hevâ", "tecellâ" ve benzeri kelimeler, diğer kıraatlere izin vermesi için elif yerine noktasız ye ile yazılır.
 </p>
 
-<h3>2. Hareke farkları</h3>
+<h3>2. <a href="./hareke.html#tablo1">Hareke farkları</a></h3>
 <p>Anlamı değiştirebilen bu farklarda kelime aynı, sadece seslendirmesi farklı.</p>
 <p>Maide <a name="v=5:6&r=rjl">5:6</a> &mdash;
     <b>erculekum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/5/verse/6/variants" target=Kuran>erculikum</a> &emsp; ('ǧ' = cim)
@@ -59,11 +60,12 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p>Şuara <a name="v=26:176&b=lo_#ayokapi">26:176</a> &mdash;
     <b>ashâbul-eyke</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/26/verse/176/variants" target=Kuran>ashâbu leyke</a>
     <img src="img/Suara 176.png">
-    Eyke ashabından bahseden iki ayette (15:78 ve 50:14) kıraat farkı yok. Medine, Mekke ve Şam kurrâsı, burada ve 
+    Medine, Mekke ve Şam kurrâsı, burada ve 
     <a name="v=38:13&b=lo_#ayokapi">38:13</a> ayetinde 
     kelimeyi <b>leyke</b> şeklinde okumuş. Demek "Leyke" diye bir yer ismi var.
 </p>
-<h3>3. Farklı harf, aynı kelime</h3>
+
+<h3>3. <a href="./iqra_list.html#tablo1">Harf farkları</a></h3>
 <p>Şive farkı kadar yaygın olmayan bir fark da fiillerde gözleniyor. Fiilin hangi bâbda (kip) kullanıldığı, etken veya edilgenliği, hangi şahıs olduğu gibi hususlarda harf ya da hareke farkları kaydedilmiştir.</p>
 <p>Hicr <a name="v=15:8&r=nzl">15:8</a> &mdash;
     <b>nunezzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tenezzelu veya tunezzelu</a>
@@ -71,82 +73,28 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
     Kûfe imamları bu ayeti "melekleri hakkıyla indiririz" mealinde okurken, diğerleri "melekler hakkıyla iner" diyor. Söz farklı ama taşıdığı anlam aynı.
 </p>
 
-<h3 id="kelime">4. Farklı kelime, aynı imlâ</h3>
+<h3>4. <a href="./kelime.html#tablo1">Farklı kök, aynı imlâ</a></h3>
 <p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için her ikisi de hafızalarda korunmuş, lakin Osmânî mushaflarda aynı şekilde resmedilmiş. Bu farkların tamamını aşağıda <b>13 ayette 10 kelime</b> olarak gösterdim.</p>
-<p>Bakara <a name="v=2:219&r=kbr">2:219</a> &mdash;
-    <b>kebîrun</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/219/variants" target=Kuran>kesîrun</a>
-    <img src="img/Bakara 219.png">
-    Günahın niteliği "kebîrun" büyük veya "kesîrun" çok anlamında. Ya da hem büyük hem çok... Aynı kelime aşağıda, Ahzab <a name="v=33:68&r=kbr">33:68</a> ayetinde.
-</p>
-<p>Bakara <a name="v=2:259&r=n$z">2:259</a> &mdash;
-    <b>nunşizuhâ</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/259/variants" target=Kuran>nunşiruhâ</a>
-    <img src="img/Bakara 259.png">
-    Cesede can girerken kemikler üst üste kaldırılıyor ve o şekilde yayılıyor, neşrediliyor.
-</p>
-<p>Enam <a name="v=6:57&r=qSS">6:57</a> &mdash;
-    <b>yaqussu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/6/verse/57/variants" target=Kuran>yaqdi</a>
-    <img src="img/Enam 57.png">
-
-</p>
-<p>Yunus <a name="v=10:30&r=blw">10:30</a> &mdash;
-    <b>teblû</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/30/variants" target=Kuran>tetlû</a>
-    <img src="img/Yunus 30.png">
-
-</p>
-<p>Furkan <a name="v=25:48&r=b$r">25:48</a> &mdash;
-    <b>buşran</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/25/verse/48/variants" target=Kuran>neşran veya nuşran</a>
-    <img src="img/Furkan 48.png">
-    Aynı okuma ve yazma farkı A'raf <a name="v=7:57&r=b$r">7:57</a> ve Neml <a name="v=27:63&r=b$r">27:63</a> ayetlerinde.
-</p>
 <p>Ankebut <a name="v=29:58&r=bwA">29:58</a> &mdash;
     <b>lenubevviennehum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants" target=Kuran>lenusviyennehum</a>
     <img src="img/Ankebut 58.png">
     İki kelime kulağa çok farklı geliyor, ama noktalar olmayınca Kûfi yazıda imlâ değişmez. Anlam da çok yakın: Bir yerde yerleşmek, orayı yurt edinmektir. 
-</p>
-<p>Ahzab <a name="v=33:68&r=kbr">33:68</a> &mdash;
-    <b>kebîran</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/33/verse/68/variants" target=Kuran>kesîran</a>
-    <img src="img/Ahzab 68.png">
-    Lânet de öyle: Hem "kebîr" büyük, hem "kesîr" çok.
-</p>
-<p>Zuhruf <a name="v=43:19&r=Ebd">43:19</a> &mdash;
-    <b>'ibâdu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/43/verse/19/variants" target=Kuran>'inde</a>
-    <img src="img/Zuhruf 19.png">
-    Mekke ve Şam kurrâsı, bu kelimeyi <b>'inde</b> şeklinde okumuş.
 </p>
 <p>Hucurat <a name="v=49:6&r=byn">49:6</a> &mdash;
     <b>fetebeyyenû</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/49/verse/6/variants" target=Kuran>fetesebbetû</a> 
     <img src="img/Hucurat 6.png">
     Kûfe'nin iki imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Harflerin noktası olmadığı için imlâ aynı. Aynı kıraat ve imlâ farkı Nisâ <a name="v=4:94&r=byn">4:94</a> ayetinde.
 </p>
-<p>Tekvir <a name="v=81:24&r=Dnn">81:24</a> &mdash;
-    <b>bidanîn</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/81/verse/24/variants" target=Kuran>bizanîn</a>
-    <img src="img/Tekvir 24.png">
-</p>
-<br>
-<table id=tablo1></table>
-<p><b>Kaynak:</b><br>
-    <a href="https://journals.ku.edu.kw/jsis/index.php/jsis/article/view/1491" 
-    target=Kuran">Eleven words whose spelling is the same</a> (Khazer Al Majali) 2003, s.87<br>
-    Başlıkta "11 kelime" diyor ama iki kelimenin ikişer adet tekrarı ile tabloda 15 kelime var. Pembe işaretli kelimenin kıraat farkı imlâya da yansıyor.
-</p>
 
-<h3>5. <a href="./mesahif.html">Farklı imlâ</a></h3>
-<p>Bazı ayetlerin okunuşuyla birlikte yazılışı da değişiyor. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Biri diğerinden "daha doğru" denemediği için, her ikisi de Osmânî mushaflarda "bölgesel fark" olarak kayda geçmiş. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. Sonuç olarak, bugün dünyanın her yerinde okunmakta olan mushaflar ile Hz Osman tarafından Kûfe'ye gönderilen el yazması arasında sadece 3 harf farkı var.
+<h3>5. <a href="./mesahif.html#tablo1">Farklı imlâ</a></h3>
+<p>Bazı ayetlerin okunuşuyla birlikte yazılışı da değişiyor. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Biri diğerinden "daha doğru" denemediği için, her ikisi de Osmânî mushaflarda "bölgesel fark" olarak kayda geçmiş. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. </p>
+<p>Yunus <a target=iqra href="/Kuran/reader.html#v=10:22&r=syr">10:22</a> &mdash;
+    <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
+    <img src="img/Yunus 22.png">
+    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. Tablodaki 44 ayet içinde kelime farkı olan tek yer bu, aşağıda sarı işaretli.
 </p>
-<p></p>
+<p>Sonuç olarak, bugün dünyanın her yerinde okunmakta olan mushaflar ile Hz Osman tarafından Kûfe'ye gönderilen el yazması arasında sadece 3 harf farkı var.</p>
 <br>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Temmuz 2024<br>
 </p>
 <script src="init.js"></script>
-<script src="/Kuran/code/common.js"></script>
-<script src="/Kuran/code/model.js"></script>
-<script src="/Kuran/code/utilities.js"></script>
-<script src="./variants.js"></script>
-<script>
-function filter(x) {
-    return (!x.rgn || (x.rgn != '*' && x.cv != '10:22'))
-}
-function callLater() {
-    //do nothing
-}
-</script>
