--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -57,7 +57,7 @@
 * Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafı <b>tahtehâ ⇒ min tahtihâ</b><br>
 * Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafı <b>yuseyyirukum ⇒ yenşurukum</b><br>
 * Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam <b>huvel-ganiy ⇒ el-ganiy</b></li>
-    <li><a href="./kiraat.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar da ikisi hariç tek harf farkıdır:<br>
+    <li><a href="./kelime.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar da ikisi hariç tek harf farkıdır:<br>
 * Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
 * Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)</li>
     <li><a href="./iqra_list.html#tablo">233 kelime</a> imlâya uygun farklı bir harfle okunabilir. Bunların tamamı tek harf farkıdır. </li>
