--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
   2020</a> &emsp;
   <a target=Kuran
   href="https://maeyler.github.io/JS/api/YouTube#PLqPY2DLsMnVDkZXDSMCDLwzWB9CnfX6Ds">
-  2023</a>
+  2023</a> &emsp;
+  <a target=Kuran
+  href="https://maeyler.github.io/JS/api/YouTube#PLqPY2DLsMnVBvkdCqxft-kBjwOy4lIBHs">
+  2024</a>
 </p>
 </div>
 <div class=gap> </div>
