--- a/ders/hareke.html
+++ b/ders/hareke.html
@@ -16,9 +16,12 @@
 <ol>
     <li>Şive/lehçe farkları -- anlam değişmez
     <li>Hareke farkları -- sessiz harfler değişmez
-    <li><a href="./iqra_list.html">Harf farkları</a> -- kelime veya imlâ değişebilir
+    <li><a href="./harf.html">Harf farkları</a> -- kelime veya imlâ değişebilir
 </ol>
-<p>İkinci gruptaki yaklaşık 1200 kelime bu sayfada görülecek. 1 Ocak'ta başladık.</p>
+<p class=yellow>İkinci gruptaki yaklaşık 1200 kelime bu sayfada görülecek. 1 Ocak'ta başladık.</p>
+
+<p>Tablonun her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin varyant okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
+<p>Aşağıda ilk satırda, Fatiha suresinin 4. ayetindeki <b>māliki</b> kelimesini bazı kıraat imamlarının  <b>meliki</b> okuduğunu görüyoruz.</p>
 
   <table id="tablo1"></table>
 <blockquote>
