--- a/ders/kadime.html
+++ b/ders/kadime.html
@@ -35,7 +35,7 @@
     <li><a href="kiraat.html">Geçerli kıraat farkları</a>
     <li><a href="korunmus.html">Korunmuş unsurlar</a>
     <li><a href="hareke.html">Hareke farkları listesi</a>
-    <li><a href="iqra_list.html">Harf farkları listesi</a>
+    <li><a href="harf.html">Harf farkları listesi</a>
     <li><a href="kelime.html">Kelime farkları listesi</a>
     <li><a href="mesahif.html">Kayıtlı imlâ farkları</a>
     <li><a target=Kuran 
