--- a/ders/kelime.html
+++ b/ders/kelime.html
@@ -15,8 +15,8 @@
 <ol>
     <li>Şive/lehçe farkları -- anlam değişmez
     <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
-    <li><a href="./iqra_list.html">Harf farkları</a> -- kelime ve imlâ değişmez
-    <li><a href="#tablo1">Farklı kök</a> (<span class=yellow>sarı</span>) -- bu sayfa
+    <li><a href="./harf.html">Harf farkları</a> -- kelime ve imlâ değişmez
+    <li><a href="#tablo1">Farklı kök</a> (<span class=yellow>sarı</span>) -- <b>bu sayfa</b>
     <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> (<span class=pink>pembe</span>)
 </ol>
 <p>Az sayıda bazı örneklerde, farklı köklerden türeyen kelimelerin imlâsı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için her ikisi de hafızalarda korunmuş, lakin Osmânî mushaflarda aynı şekilde resmedilmiş. Bu farkların tamamını aşağıda <b>13 ayette 10 kelime</b> olarak gösterdim.</p>
