--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -33,8 +33,8 @@
 <ol>
     <li>Şive/lehçe farkları -- anlam değişmez
     <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
-    <li><a href="./iqra_list.html">Harf farkları</a> -- kök ve imlâ değişmez, 198 ayet
-    <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ değişmez, 13 ayet
+    <li><a href="./harf.html">Harf farkları</a> -- kök ve imlâ aynı, 198 ayet
+    <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ aynı, 13 ayet
     <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>) -- 44 ayet
 </ol>
 
@@ -65,7 +65,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
     kelimeyi <b>leyke</b> şeklinde okumuş. Demek "Leyke" diye bir yer ismi var.
 </p>
 
-<h3>3. <a href="./iqra_list.html#tablo1">Harf farkları</a></h3>
+<h3>3. <a href="./harf.html#tablo1">Harf farkları</a></h3>
 <p>Şive farkı kadar yaygın olmayan bir fark da fiillerde gözleniyor. Fiilin hangi bâbda (kip) kullanıldığı, etken veya edilgenliği, hangi şahıs olduğu gibi hususlarda harf ya da hareke farkları kaydedilmiştir.</p>
 <p>Hicr <a name="v=15:8&r=nzl">15:8</a> &mdash;
     <b>nunezzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tenezzelu veya tunezzelu</a>
@@ -74,7 +74,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 </p>
 
 <h3>4. <a href="./kelime.html#tablo1">Farklı kök, aynı imlâ</a></h3>
-<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için her ikisi de hafızalarda korunmuş, lakin Osmânî mushaflarda aynı şekilde resmedilmiş. Bu farkların tamamını aşağıda <b>13 ayette 10 kelime</b> olarak gösterdim.</p>
+<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için her ikisi de hafızalarda korunmuş, lakin Osmânî mushaflarda aynı şekilde resmedilmiş.</p>
 <p>Ankebut <a name="v=29:58&r=bwA">29:58</a> &mdash;
     <b>lenubevviennehum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants" target=Kuran>lenusviyennehum</a>
     <img src="img/Ankebut 58.png">
@@ -91,9 +91,13 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p>Yunus <a target=iqra href="/Kuran/reader.html#v=10:22&r=syr">10:22</a> &mdash;
     <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
     <img src="img/Yunus 22.png">
-    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. Tablodaki 44 ayet içinde kelime farkı olan tek yer bu, aşağıda sarı işaretli.
+    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. Tablodaki 44 ayet içinde kelime kökünün değişebildiği tek yer bu.
 </p>
-<p>Sonuç olarak, bugün dünyanın her yerinde okunmakta olan mushaflar ile Hz Osman tarafından Kûfe'ye gönderilen el yazması arasında sadece 3 harf farkı var.</p>
+
+<h3 id=kaynak>Kaynaklar</h3>
+<p>Hicretten 3 asır sonra 900'lü yıllarda, Abbasi İslam devletinin merkezi olan Bağdat'ta Kurân'ın farklı okunuşları hakkında çok önemli bir tasnif çalışması yapıldı: İbn Mücâhid, belirli beş merkezden (Medine, Mekke, Basra, Şam, Kûfe) seçtiği yedi imamın kıraatini ilk defa bir araya getirerek <b>Kitâbus-Sebʿa fil-ḳırâʾât</b> (Yedi Kıraat) adlı eserini yazdı. Bundan bir asır sonra Endülüs'te Ebû ʿAmr ed-Dânî, <b>et-Teysīr</b> isimli meşhur kitabında söz konusu yedi kıraati kolayca takip edilir bir hale getirdi. </p>
+<p>1930 senesinde bu eser, Pretzl isimli Alman şarkiyatçı tarafından İstanbul'da tekrar yayınladı. Yaklaşık bir asır sonra da, Hollanda'lı M van Putten aynı kitabı İngilizce'ye çevirdi ve ön bilgiler ekleyerek genel kullanıma sundu. Aşağıdaki tablo Putten'in bu kıymetli çalışmasından süzülmüştür, <a target=Kuran href="https://okuyun.github.io/Kuran/guideQ.html#tesekkur">teşekkür ederiz</a>.</p>
+
 <br>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Temmuz 2024<br>
 </p>
