--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -60,7 +60,7 @@
     <li><a href="./kelime.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar da ikisi hariç tek harf farkıdır:<br>
 * Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
 * Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)</li>
-    <li><a href="./iqra_list.html#tablo">233 kelime</a> imlâya uygun farklı bir harfle okunabilir. Bunların tamamı tek harf farkıdır. </li>
+    <li><a href="./harf.html#tablo1">233 kelime</a> imlâya uygun farklı bir harfle okunabilir. Bunların tamamı tek harf farkıdır. </li>
 </ul>
 <p>Tek harfi aşan beş kelime farkı:</p>
 <table id=tablo1></table>
