--- a/ders/harf.html
+++ b/ders/harf.html
@@ -11,22 +11,21 @@
 
 <h2>Harf farkları listesi &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
-<p>Hicretten 3 asır sonra 900'lü yıllarda, Abbasi İslam devletinin merkezi olan Bağdat'ta Kurân'ın farklı okunuşları hakkında çok önemli bir tasnif çalışması yapıldı: İbn Mücâhid, belirli beş merkezden (Medine, Mekke, Basra, Şam, Kûfe) seçtiği yedi imamın kıraatini ilk defa bir araya getirerek <b>Kitâbus-Sebʿa fil-ḳırâʾât</b> (Yedi Kıraat) adlı eserini yazdı. Bundan bir asır sonra Endülüs'te Ebû ʿAmr ed-Dânî, <b>et-Teysīr</b> isimli meşhur kitabında söz konusu yedi kıraati kolayca takip edilir bir hale getirdi. </p>
-<p>1930 senesinde bu eser, Pretzl isimli Alman şarkiyatçı tarafından İstanbul'da tekrar yayınladı. Yaklaşık bir asır sonra da, Hollanda'lı M van Putten aynı kitabı İngilizce'ye çevirdi ve ön bilgiler ekleyerek genel kullanıma sundu. Aşağıdaki tablo Putten'in bu kıymetli çalışmasından süzülmüştür, <a target=Kuran href="https://okuyun.github.io/Kuran/guideQ.html#tesekkur">teşekkür ederiz</a>.</p>
 <p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
   <li>Şive/lehçe farkları -- anlam değişmez
   <li><a href="./hareke.html#tablo1">Hareke farkları</a> -- sessiz harfler değişmez
   <li>Harf farkları -- bunlar da üç grupta toplanabilir:
     <ul>
-        <li><a href="./iqra_list.html#tablo1">Farklı harf</a>, aynı kök
-        <li><a href="./kelime.html#tablo1">Farklı kök</a> (<span class=yellow>sarı</span>)
-        <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> (<span class=pink>pembe</span>)
+        <li>Farklı harf, aynı kök
+        <li>Farklı kök, aynı imlâ (<span class=yellow>sarı</span>)
+        <li>Farklı imlâ (<span class=pink>pembe</span>)
     </ul>
 </ol>
-<p>Birinci ve ikinci grupta çok sayıda (yaklaşık 500) ayet olduğu için hareke farklarını farklı sayfada gösterdim. Üçüncü grupta harf farkı olan yaklaşık 250 ayet aşağıdaki tabloda görülebilir. Kök farklarını harf farklarından ayırmak için <span class=yellow>sarı renkle</span> işaretledim. Bu 10 kelimenin ayrıntısı kıraat konusunda bulunabilir.
-<p>Son grup dışındaki bütün farklar, noktasız ve harekesiz resm-i Osmanî'de imlâyı değiştirmiyor. Farkların imlâya yansıdığı, <span class=pink>pembe işaretli</span> 44 ayeti daha önce başka bir tabloda göstermiştim.</p>
-<p id="tablo">Tablonun her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin varyant okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
+Üçüncü grupta harf farkı olan yaklaşık 250 ayet <a href="#tablo1">aşağıdaki tabloda</a> görülebilir. Kök farklarını harf farklarından ayırmak için <span class=yellow>sarı renkle</span> işaretledim. Bu 10 kelimenin ayrıntısı <a href="./kelime.html#tablo1">ilgili sayfada</a> bulunabilir.
+<p>Son grup dışındaki bütün farklar, noktasız ve harekesiz resm-i Osmanî'de imlâyı değiştirmiyor. Farkların imlâya yansıdığı, <span class=pink>pembe işaretli</span> 44 ayeti daha önce <a href="./mesahif.html#tablo1">başka bir tabloda</a> göstermiştim.</p>
+
+<p>Tablonun her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin varyant okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
 <p>Aşağıda ilk satırda, 2:48 ayetindeki <b>yukbelu</b> kelimesini iki kıraat imamının  <b>tukbelu</b> okuduğunu görüyoruz. Hemen altında, 2:58 ayetinde <b>naġfir</b> kelimesinin iki farklı okunuşu görülüyor.</p>
 
   <table id="tablo1"></table>
