--- a/ders/hareke.html
+++ b/ders/hareke.html
@@ -15,7 +15,7 @@
 <p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
     <li>Şive/lehçe farkları -- anlam değişmez
-    <li>Hareke farkları -- sessiz harfler değişmez
+    <li><b>Hareke farkları</b> -- sessiz harfler değişmez
     <li><a href="./harf.html">Harf farkları</a> -- kelime veya imlâ değişebilir
 </ol>
 <p class=yellow>İkinci gruptaki yaklaşık 1200 kelime bu sayfada görülecek. 1 Ocak'ta başladık.</p>
