--- a/ders/harf.html
+++ b/ders/harf.html
@@ -14,15 +14,15 @@
 <p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
   <li>Şive/lehçe farkları -- anlam değişmez
-  <li><a href="./hareke.html#tablo1">Hareke farkları</a> -- sessiz harfler değişmez
-  <li>Harf farkları -- bunlar da üç grupta toplanabilir:
+  <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
+  <li><b>Harf farkları</b> -- bunlar da üç grupta toplanabilir:
     <ul>
         <li>Farklı harf, aynı kök
         <li>Farklı kök, aynı imlâ (<span class=yellow>sarı</span>)
         <li>Farklı imlâ (<span class=pink>pembe</span>)
     </ul>
 </ol>
-Üçüncü grupta harf farkı olan yaklaşık 250 ayet <a href="#tablo1">aşağıdaki tabloda</a> görülebilir. Kök farklarını harf farklarından ayırmak için <span class=yellow>sarı renkle</span> işaretledim. Bu 10 kelimenin ayrıntısı <a href="./kelime.html#tablo1">ilgili sayfada</a> bulunabilir.
+Üçüncü grupta harf farkı olan yaklaşık 300 kelime aşağıdaki tabloda görülebilir. Kök farklarını harf farklarından ayırmak için <span class=yellow>sarı renkle</span> işaretledim. Bu 10 kelimenin ayrıntısı <a href="./kelime.html#tablo1">ilgili sayfada</a> bulunabilir.
 <p>Son grup dışındaki bütün farklar, noktasız ve harekesiz resm-i Osmanî'de imlâyı değiştirmiyor. Farkların imlâya yansıdığı, <span class=pink>pembe işaretli</span> 44 ayeti daha önce <a href="./mesahif.html#tablo1">başka bir tabloda</a> göstermiştim.</p>
 
 <p>Tablonun her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin varyant okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
@@ -30,10 +30,10 @@
 
   <table id="tablo1"></table>
 <blockquote>
-  İşaretsiz satırlar tek harf farkı olan 198&nbsp;ayette&nbsp;235&nbsp;kelime <br>
+  İşaretsiz satırlar tek harf farkı olan 203&nbsp;ayette&nbsp;241&nbsp;kelime <br>
   <span class=yellow>sarı işaretli</span> satırlar, kelime farkı olan 13&nbsp;ayette&nbsp;14&nbsp;kelime <br>
   <span class=pink>pembe işaretli</span> satırlar, imlâ farkı olan 44&nbsp;ayette&nbsp;45&nbsp;kelime <br>
-  Toplam 255&nbsp;ayette&nbsp;294&nbsp;kelime
+  Toplam 260&nbsp;ayette&nbsp;300&nbsp;kelime
 </blockquote>
 <p>Kıyaslanan kıraat imamı: <select id=qari></select></p>
 <pre>et-Teysīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
