--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -33,7 +33,7 @@
 <ol>
     <li>Şive/lehçe farkları -- anlam değişmez
     <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
-    <li><a href="./harf.html">Harf farkları</a> -- kök ve imlâ aynı, 198 ayet
+    <li><a href="./harf.html">Harf farkları</a> -- kök ve imlâ aynı, 203 ayet
     <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ aynı, 13 ayet
     <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>) -- 44 ayet
 </ol>
@@ -48,7 +48,12 @@
     <img src="img/Naziat 15.png">
 Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu görülüyor. Buna benzer çok örnek var: "hudâ", "hevâ", "tecellâ" ve benzeri kelimeler, diğer kıraatlere izin vermesi için elif yerine noktasız ye ile yazılır.
 </p>
-
+<p>Bakara <a name="v=2:126&b=iboraAhiym">2:126</a> &mdash;
+    <b>İbrâhîm</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/126/variants" target=Kuran>İbrâhâm</a>
+        <img src="img/Bakara 126.png">
+    "İbrâhîm" kelimesinin de şive farkından gelen iki farklı okunuşu var. Çok sayıda oldukları için, şive farkları Iqra yazılımında gösterilmedi.
+    </p>
+    
 <h3>2. <a href="./hareke.html#tablo1">Hareke farkları</a></h3>
 <p>Anlamı değiştirebilen bu farklarda kelime aynı, sadece seslendirmesi farklı.</p>
 <p>Maide <a name="v=5:6&r=rjl">5:6</a> &mdash;
@@ -64,6 +69,11 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
     <a name="v=38:13&b=lo_#ayokapi">38:13</a> ayetinde 
     kelimeyi <b>leyke</b> şeklinde okumuş. Demek "Leyke" diye bir yer ismi var.
 </p>
+<p>Saff <a name="v=61:14">61:14</a> &mdash;
+    <b>ensârallâh</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/61/verse/14/variants" target=Kuran>ensâran lillâh</a>
+    <img src="img/Saff 14.png">
+    İki farklı okuyuş Resm-i Osmani'de aynı yazılıyor. İki kelimenin arasındaki elifin hangi kelimede olduğu belirsiz.
+</p>
 
 <h3>3. <a href="./harf.html#tablo1">Harf farkları</a></h3>
 <p>Şive farkı kadar yaygın olmayan bir fark da fiillerde gözleniyor. Fiilin hangi bâbda (kip) kullanıldığı, etken veya edilgenliği, hangi şahıs olduğu gibi hususlarda harf ya da hareke farkları kaydedilmiştir.</p>
@@ -71,6 +81,16 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
     <b>nunezzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tenezzelu veya tunezzelu</a>
     <img src="img/Hicr 8.png">
     Kûfe imamları bu ayeti "melekleri hakkıyla indiririz" mealinde okurken, diğerleri "melekler hakkıyla iner" diyor. Söz farklı ama taşıdığı anlam aynı.
+</p>
+<p>Neml <a name="v=27:81">27:81</a> &mdash;
+    <b>bihâdil-'umyi</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/27/verse/81/variants" target=Kuran>tehdil-'umâ</a>
+    <img src="img/Neml 81.png">
+    İki farklı okuyuş Resm-i Osmani'de aynı yazılıyor. 
+</p>
+<p>Mucadele <a name="v=58:8">58:8</a> &mdash;
+    <b>yetenâcevne</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/58/verse/8/variants" target=Kuran>yentecûne</a>
+    <img src="img/Mucadele 8.png">
+    İki harfin (tê ve nun) yer değiştirebildiği tek örnek bu.
 </p>
 
 <h3>4. <a href="./kelime.html#tablo1">Farklı kök, aynı imlâ</a></h3>
@@ -91,7 +111,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p>Yunus <a target=iqra href="/Kuran/reader.html#v=10:22&r=syr">10:22</a> &mdash;
     <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
     <img src="img/Yunus 22.png">
-    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. Tablodaki 44 ayet içinde kelime kökünün değişebildiği tek yer bu.
+    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. 
 </p>
 
 <h3 id=kaynak>Kaynaklar</h3>
