--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -58,14 +58,15 @@
 * Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafı <b>tahtehâ ⇒ min tahtihâ</b><br>
 * Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafı <b>yuseyyirukum ⇒ yenşurukum</b><br>
 * Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam <b>huvel-ganiy ⇒ el-ganiy</b></li>
-    <li><a href="./kelime.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar da ikisi hariç tek harf farkıdır:<br>
+    <li><a href="./kelime.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar ikisi hariç tek harf farkıdır:<br>
 * Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
 * Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)</li>
-    <li><a href="./harf.html#tablo1">233 kelime</a> imlâya uygun farklı bir harfle okunabilir. Bunların tamamı tek harf farkıdır. </li>
+    <li><a href="./harf.html#tablo1">241 kelime</a> imlâya uygun farklı bir harfle okunabilir. Biri dışında tamamı tek harf farkıdır:<br>
+* Mucadele <a name="v=58:8&r=njw">58:8</a> — <b>yetenâcevne ⇒ yentecûne</b></li>
 </ul>
-<p>Tek harfi aşan beş kelime farkı:</p>
+<p>Tek harfi aşan altı kelime farkı:</p>
 <table id=tablo1></table>
-<p>Bunların ikisi imlâya yansımıyor, pembe işaretli üçü yansıyor.</p>
+<p>Pembe işaretli üç varyant imlâya da yansıyor.</p>
 
 <h3 id="sonuc">Sonuç</h3>
 <p><b>Kıraat farkları</b> imamların icadı ya da okuyuş hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.
@@ -80,9 +81,13 @@
 <script src="/Kuran/code/utilities.js"></script>
 <script src="variants.js"></script>
 <script>
-const LIST = ['9:100', '10:22', '29:58', '49:6', '57:24']
+const LIST = ['9:100', '10:22', '29:58', '49:6', '57:24', '58:8']
+//['9:100:17', '10:22:2', '29:58:4', '49:6:7', '57:24:9', '58:8:12']
 function filter(x) {
-    return (!LIST.includes(x.cv))
+    if (!LIST.includes(x.cv)) return true
+    let t = x.cv+':'+x.num
+    if (t == '57:24:4') return true
+    console.log(t); return false
 }
 function callLater() {
     //do nothing
