--- a/ders/hareke.html
+++ b/ders/hareke.html
@@ -37,7 +37,8 @@
     7 el-Kisā'ī  Kûfe
 </pre>
 <br>
-<p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Ekim 2024
+<p><i>You may send questions and errors to</i> &lt;okuyun5@gmail.com&gt;</p>
+<p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Aralık 2024
 </p>
 <script src="/Kuran/code/common.js"></script>
 <script src="/Kuran/code/model.js"></script>
