--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -42,17 +42,16 @@
 </p>
 
 <h3>1. Şive farkları</h3>
-<p>Kıraat farklarının pek çoğu sadece şive ve lehçe farkı, yazılış ve anlam değişmiyor. Bunların da büyük bir kısmı ayet sonundaki noktasız ye (elif maksûra) harflerinin okunuşuyla ilgili:</p>
+<p>Kıraat farklarının pek çoğu sadece şive ve lehçe farkı: yazılış ve anlam değişmiyor. Çok sayıda oldukları için, şive farklarının küçük bir kısmı Iqra yazılımında gösterilir.</p>
 <p>Naziat <a name="v=79:15&b=muwsaY%60^">79:15</a> &mdash;
 <b>Mûsâ</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mûsê veya Mûsiy</a>
     <img src="img/Naziat 15.png">
-Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu görülüyor. Buna benzer çok örnek var: "hudâ", "hevâ", "tecellâ" ve benzeri kelimeler, diğer kıraatlere izin vermesi için elif yerine noktasız ye ile yazılır.
+    Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu görülüyor. Buna benzer çok örnek var: "hudâ", "hevâ", "tecellâ" ve benzeri kelimeler, farklı kıraatlere izin vermesi için elif yerine noktasız "ye" (elif maksûra) ile yazılır.
 </p>
-<p>Bakara <a name="v=2:126&b=iboraAhiym">2:126</a> &mdash;
-    <b>İbrâhîm</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/126/variants" target=Kuran>İbrâhâm</a>
-        <img src="img/Bakara 126.png">
-    "İbrâhîm" kelimesinin de şive farkından gelen iki farklı okunuşu var. Çok sayıda oldukları için, şive farkları Iqra yazılımında gösterilmedi.
-    </p>
+<p>Fetih <a name="v=48:10&b=Ealayohu">48:10</a> &mdash;
+    <b>‘aleyhullâhe</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/48/verse/10/variants" target=Kuran>‘aleyhillâhe</a>
+        <img src="img/Fetih 10.png">
+    Kitabımızda 146 kere geçen "‘aleyhi" kelimesi yalnız bu ayette ve sadece Hafs rivayetinde "u" ile okunur. Diğer bütün kıraat rivayetlerinde "i" sesi değişmez. </p>
     
 <h3>2. <a href="./hareke.html#tablo1">Hareke farkları</a></h3>
 <p>Anlamı değiştirebilen bu farklarda kelime aynı, sadece seslendirmesi farklı.</p>
@@ -119,6 +118,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p>1930 senesinde bu eser, Pretzl isimli Alman şarkiyatçı tarafından İstanbul'da tekrar yayınladı. Yaklaşık bir asır sonra da, Hollanda'lı M van Putten aynı kitabı İngilizce'ye çevirdi ve ön bilgiler ekleyerek genel kullanıma sundu. Aşağıdaki tablo Putten'in bu kıymetli çalışmasından süzülmüştür, <a target=Kuran href="https://okuyun.github.io/Kuran/guideQ.html#tesekkur">teşekkür ederiz</a>.</p>
 
 <br>
+<p><i>You may send questions and errors to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Temmuz 2024<br>
 </p>
 <script src="init.js"></script>
