--- a/ders/harf.html
+++ b/ders/harf.html
@@ -46,6 +46,7 @@
   7 el-Kisā'ī  Kûfe
 </pre>
 <br>
+<p><i>You may send questions and errors to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Ekim 2024
 </p>
 <script src="/Kuran/code/common.js"></script>
