--- a/ders/hareke.html
+++ b/ders/hareke.html
@@ -14,7 +14,7 @@
 <p></p>
 <p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
-    <li>Şive/lehçe farkları -- anlam değişmez
+    <li>Telaffuz farkları -- anlam değişmez
     <li><b>Hareke farkları</b> -- sessiz harfler değişmez
     <li><a href="./harf.html">Harf farkları</a> -- kelime veya imlâ değişebilir
 </ol>
