--- a/ders/harf.html
+++ b/ders/harf.html
@@ -13,7 +13,7 @@
 
 <p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
-  <li>Şive/lehçe farkları -- anlam değişmez
+  <li>Telaffuz farkları -- anlam değişmez
   <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
   <li><b>Harf farkları</b> -- bunlar da üç grupta toplanabilir:
     <ul>
