--- a/ders/kelime.html
+++ b/ders/kelime.html
@@ -13,7 +13,7 @@
 
 <p>Bütün kıraat farkları beş grupta toplanabilir:</p>
 <ol>
-    <li>Şive/lehçe farkları -- anlam değişmez
+    <li>Telaffuz farkları -- anlam değişmez
     <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
     <li><a href="./harf.html">Harf farkları</a> -- kelime ve imlâ değişmez
     <li><a href="#tablo1">Farklı kök</a> (<span class=yellow>sarı</span>) -- <b>bu sayfa</b>
