--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -32,10 +32,10 @@
 <p>Bu sayfadaki örnekleri, beş grupta topladım:</p>
 <ol>
     <li>Telaffuz farkları -- anlam değişmez
-    <li><a href="./hareke.html">Hareke farkları</a> -- sessiz harfler değişmez
-    <li><a href="./harf.html">Harf farkları</a> -- kök ve imlâ aynı, 203 ayet
-    <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ aynı, 13 ayet
-    <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>) -- 44 ayet
+    <li><a href="./hareke.html">Hareke farkları</a> -- harfler aynı, 850 kelime
+    <li><a href="./harf.html">Harf farkları</a> -- kök ve imlâ aynı, 260 kelime
+    <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ aynı, 15 kelime
+    <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>) -- 45 kelime
 </ol>
 
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
@@ -46,12 +46,12 @@
 <p>Naziat <a name="v=79:15&b=muwsaY%60^">79:15</a> &mdash;
 <b>Mûsâ</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mûsê | Mûsiy</a>
     <img src="img/Naziat 15.png">
-    Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu görülüyor. Buna benzer çok örnek var: "hudâ", "hevâ", "tecellâ" ve benzeri kelimeler, farklı kıraatlere izin vermesi için elif yerine noktasız "ye" (elif maksûra) ile yazılır.
+    Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu görülüyor. Buna benzer çok örnek var: "hudâ", "hevâ", "tecellâ" ve benzeri kelimeler, farklı kıraatlere izin vermesi için elif yerine noktasız "ye" (elif maksûra) ile yazılır. Bunun gibi, "nâr" ve "kâfirûn" kelimelerini "niyr" ve "kiyfirûn" olarak okuyan qâriler var! İlk duyuşta kulağa çok farklı geliyor, ama farklı şiveler hakikaten ses zenginliği katıyor.
 </p>
 <p>Fetih <a name="v=48:10&b=Ealayohu">48:10</a> &mdash;
     <b>‘aleyhullâhe</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/48/verse/10/variants" target=Kuran>‘aleyhillâhe</a>
         <img src="img/Fetih 10.png">
-    Kitabımızda 146 kere geçen "‘aleyhi" kelimesi yalnız bu ayette ve sadece Hafs rivayetinde "u" ile okunur. Diğer bütün kıraat rivayetlerinde "i" sesi değişmez. </p>
+    Kitabımızda 146 kere geçen "‘aleyhi" kelimesi yalnız bu ayette ve sadece Hafs rivayetinde "u" ile okunur. Diğer bütün kıraat rivayetlerinde "i" sesi değişmez. Buna karşılık, 138 ayette geçen "‘aleyhim" kelimesinin daha kalın okunuşları var: "‘aleyhum" ve "‘aleyhumû" gibi... </p>
     
 <h3>2. <a href="./hareke.html#tablo1">Hareke farkları</a></h3>
 <p>Anlamı değiştirebilen bu farklarda kelime aynı, sadece seslendirmesi farklı.</p>
@@ -123,7 +123,7 @@
 <p>1930 senesinde bu eser, Pretzl isimli Alman şarkiyatçı tarafından İstanbul'da tekrar yayınladı. Yaklaşık bir asır sonra da, Hollanda'lı M van Putten aynı kitabı İngilizce'ye çevirdi ve ön bilgiler ekleyerek genel kullanıma sundu. Aşağıdaki tablo Putten'in bu kıymetli çalışmasından süzülmüştür, <a target=Kuran href="https://okuyun.github.io/Kuran/guideQ.html#tesekkur">teşekkür ederiz</a>.</p>
 
 <br>
-<p><i>You may send questions and errors to</i> &lt;okuyun5@gmail.com&gt;</p>
+<p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Temmuz 2024<br>
 </p>
 <script src="init.js"></script>
