--- a/ders/harf.html
+++ b/ders/harf.html
@@ -22,7 +22,7 @@
         <li>Farklı imlâ (<span class=pink>pembe</span>)
     </ul>
 </ol>
-Üçüncü grupta harf farkı olan yaklaşık 300 kelime aşağıdaki tabloda görülebilir. Kök farklarını harf farklarından ayırmak için <span class=yellow>sarı renkle</span> işaretledim. Bu 10 kelimenin ayrıntısı <a href="./kelime.html#tablo1">ilgili sayfada</a> bulunabilir.
+Üçüncü grupta harf farkı olan yaklaşık 320 kelime aşağıdaki tabloda listelenmiştir. Kök farklarını harf farklarından ayırmak için <span class=yellow>sarı renkle</span> işaretledim. Bu 15 kelimenin ayrıntısı <a href="./kelime.html#tablo1">ilgili sayfada</a> bulunabilir.
 <p>Son grup dışındaki bütün farklar, noktasız ve harekesiz resm-i Osmanî'de imlâyı değiştirmiyor. Farkların imlâya yansıdığı, <span class=pink>pembe işaretli</span> 44 ayeti daha önce <a href="./mesahif.html#tablo1">başka bir tabloda</a> göstermiştim.</p>
 
 <p>Tablonun her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin varyant okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
@@ -30,23 +30,14 @@
 
   <table id="tablo1"></table>
 <blockquote>
-  İşaretsiz satırlar tek harf farkı olan 203&nbsp;ayette&nbsp;241&nbsp;kelime <br>
-  <span class=yellow>sarı işaretli</span> satırlar, kelime farkı olan 13&nbsp;ayette&nbsp;14&nbsp;kelime <br>
+  İşaretsiz satırlar tek harf farkı olan 220&nbsp;ayette&nbsp;260&nbsp;kelime <br>
+  <span class=yellow>sarı işaretli</span> satırlar, kök farkı olan 14&nbsp;ayette&nbsp;15&nbsp;kelime <br>
   <span class=pink>pembe işaretli</span> satırlar, imlâ farkı olan 44&nbsp;ayette&nbsp;45&nbsp;kelime <br>
-  Toplam 260&nbsp;ayette&nbsp;300&nbsp;kelime
+  Toplam 280&nbsp;ayette&nbsp;320&nbsp;kelime
 </blockquote>
 <p>Kıyaslanan kıraat imamı: <select id=qari></select></p>
-<pre>et-Teysīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
-  1 Nāfi`      Medine
-  2 Ibn Kesīr  Mekke
-  3 Ebū `Amr   Basra
-  4 Ibn `Āmir  Şam
-  5 `Āsım      Kûfe
-  6 Hamza      Kûfe
-  7 el-Kisā'ī  Kûfe
-</pre>
 <br>
-<p><i>You may send questions and errors to</i> &lt;okuyun5@gmail.com&gt;</p>
+<p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Ekim 2024
 </p>
 <script src="/Kuran/code/common.js"></script>
