--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -54,14 +54,14 @@
 <h3 id="harf">Tek harf farkı</h3>
 <p>Sessiz harfleri değiştiren kıraat farklarının nerdeyse tamamı tek harf boyutundadır: Bir harf eksik, bir harf fazla, ya da bir harf yerine başka bir harf okunmuş.</p>
 <ul>
-    <li><a href="./mesahif.html#tablo1">44 kelime</a> için kaydedilmiş imlâ farkları büyük oranda tek harf boyutundadır. Tek harfi aşan imlâ farkı üç kelime:<br>
+    <li><a href="./mesahif.html#tablo1">45 kelime</a> için kaydedilmiş imlâ farkları büyük oranda tek harf boyutundadır. Tek harfi aşan imlâ farkı üç kelime:<br>
 * Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafı <b>tahtehâ ⇒ min tahtihâ</b><br>
 * Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafı <b>yuseyyirukum ⇒ yenşurukum</b><br>
 * Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam <b>huvel-ganiy ⇒ el-ganiy</b></li>
-    <li><a href="./kelime.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar ikisi hariç tek harf farkıdır:<br>
+    <li><a href="./kelime.html#tablo1">15 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar ikisi hariç tek harf farkıdır:<br>
 * Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
 * Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)</li>
-    <li><a href="./harf.html#tablo1">241 kelime</a> imlâya uygun farklı bir harfle okunabilir. Biri dışında tamamı tek harf farkıdır:<br>
+    <li><a href="./harf.html#tablo1">260 kelime</a> imlâya uygun farklı bir harfle okunabilir. Biri dışında tamamı tek harf farkıdır:<br>
 * Mucadele <a name="v=58:8&r=njw">58:8</a> — <b>yetenâcevne ⇒ yentecûne</b></li>
 </ul>
 <p>Tek harfi aşan altı kelime farkı:</p>
@@ -73,7 +73,7 @@
 <b>İmlâ farkları</b> da yazıcıların rastgele tercihleri veya hataları değil, bölgesel kıraat farklarını yansıtıyor. Kıraat farklarına bağlı olarak kağıt üstünde korunmuş.</p>
 <p>"Bir harfi bile değişmemiştir" söylemi, kıraat farklarından habersiz olmanın bir göstergesidir, bu söylemden vaz geçmeliyiz. Peki ne diyelim? Aslında korunmuşluk çok daha kuvvetli bir hakikat: Kuran-ı Kerim bütün <b>kıraat farklarıyla birlikte</b> korunmuştur; <m>surelerin</m>, <m>ayetlerin</m>, <m>kelimelerin</m> dizilişinde hiçbir farklılık yoktur. Bazı kelimelerin okunuşunda hareke ya da harf farkı olabilir. Kıraat farkları hafızalarda, imlâ farkları Osmanî mushaflarda kaydedilmiştir.</p>
 <br>
-<p><i>You may send questions and errors to</i> &lt;okuyun5@gmail.com&gt;</p>
+<p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Eylul 2024<br>
 </p>
 <script src="init.js"></script>
