--- a/ders/list.html
+++ b/ders/list.html
@@ -2,33 +2,41 @@
 <html lang="en-US">
 <meta charset="UTF-8">
 <meta name="viewport"    content="width=device-width">
-<meta name="author"      content="M A Eyler, Istanbul, 2024" />
-<meta name="description" content="The oldest sheets of Quran" />
+<meta name="author"      content="M A Eyler, Istanbul, 2025" />
+<meta name="description" content="List of variant readings in Quran" />
 <link rel="stylesheet" href="ders.css" media="all">
 <link rel="stylesheet" href="variants.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
-<title>Hareke farkları listesi</title>
+<title>Kıraat farkları listesi</title>
 
-<h2>Hareke farkları listesi &emsp; <button><a href="kadime.html">◀</a></button></h2>
+<h2>Kıraat farkları listesi &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
 <p></p>
 <p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
     <li>Telaffuz farkları -- anlam değişmez
     <li><b>Hareke farkları</b> -- sessiz harfler değişmez
-    <li><a href="./harf.html">Harf farkları</a> -- kelime veya imlâ değişebilir
+    <li><b>Harf farkları</b> -- kelime veya imlâ değişebilir
 </ol>
-<p class=yellow>İkinci gruptaki yaklaşık 850 kelime aşağıda listelenmiştir.</p>
+<p class=yellow>Telaffuz farkları çok sayıda olduğu için küçük bir kısmı bu tabloya alındı.  Diğer iki gruptaki yaklaşık 1200 kelime aşağıda listelenmiştir.</p>
 
-<p>Aşağıda ilk satırda, Fatiha suresinin 4. ayetindeki <b>māliki</b> kelimesini bazı kıraat imamlarının  <b>meliki</b> okuduğunu görüyoruz.</p>
+<p>Tablonun her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin varyant okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
 
   <table id="tablo1"></table>
 <blockquote>
 </blockquote>
 <p>Kıyaslanan kıraat imamı: <select id=qari></select></p>
+<p>Tablonun içinde alt gruplar:</p>
+<ol>
+    <li>Telaffuz farkları -- anlam değişmez
+    <li><a href="./hareke.html">Hareke farkları</a>
+    <li><a href="./harf.html">Harf farkları</a>
+    <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>)
+    <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>)
+</ol>
 <br>
 <p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
-<p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Aralık 2024
+<p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Ocak 2025
 </p>
 <script src="/Kuran/code/common.js"></script>
 <script src="/Kuran/code/model.js"></script>
@@ -36,7 +44,7 @@
 <script src="./variants.js"></script>
 <script>
 function filter(x) {
-  if (x.rgn !== 'x') return true
+//   if (x.rgn !== 'x') return true
   switch (qari.selectedIndex) {
     case 0:
       return false //compare to NONE
