--- a/ders/hareke.html
+++ b/ders/hareke.html
@@ -27,6 +27,8 @@
 </blockquote>
 <p>Kıyaslanan kıraat imamı: <select id=qari></select></p>
 <br>
+<p class=yellow>Bu sayfadaki verileri kullanıma hazırlayanlar: <br>
+Mustafa Sözen ve Celalettin Penbe &mdash; teşekkürler.</p>
 <p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Aralık 2024
 </p>
